# cloud-task

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yaml  test.yaml
cloudtask/: authentication.py  client.py  settings.py  urls.py
testapp/testapp/: settings.py  urls.py
