[metadata]
name = cloud-task
version = attr: cloudtask.__version__
url = https://github.com/mrpawan-gupta/cloud-task
author = AM
author_email = guptapawan2017@gmail.com
maintainer = AM
maintainer_email = guptapawan2017@gmail.com
description = Integrate your django application with Google Cloud Task from Google Cloud Platform
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT-Licence

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

project_urls =
    Documentation = https://github.com/mrpawan-gupta/cloud-task
    Source = https://github.com/mrpawan-gupta/cloud-task

keywords =
    django
    cloud task
    tasks
    google cloud
    google cloud tasks
    google app engine cloud task
    http app engine task

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    google-cloud-tasks >= 2.5
